# BlocosCAD

./: .gitignore  README.md  app.py  bloco.py  modelo.dxf  pyproject.toml  requirements.txt
templates/: index.html
