[tool.poetry]
name = "blocoscad"
version = "0.1.0"
description = ""
authors = ["Joao Carlos <joao.carlos.dev.log@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ezdxf = "^1.0.3"
django = "^4.2"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
